--- a/src/index.scss
+++ b/src/index.scss
@@ -22,6 +22,15 @@ body {
             border: 1px solid rgb(232, 232, 232);
             border-radius: 8px;
             padding: 0 15px;
+            position: relative;
+            .clear {
+                position: absolute;
+                right: 10px;
+                top: 14px;
+                width: 18px;
+                height: 18px;
+                cursor: pointer;
+            }
             input {
                 border: none;
                 padding: 13px;
