added cart animation, fixed function addToCart

--- a/src/components/Drawer/Drawer.module.scss
+++ b/src/components/Drawer/Drawer.module.scss
@@ -4,50 +4,40 @@
     right: 0;
     left: 0;
     height: 100vh;
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: rgba(0, 0, 0, 0.3);
     z-index: 1;
-    .visible {
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0.2s ease-in-out, opacity 0.2s ease-in-out;
+    .visibleCart {
         position: absolute;
         right: 0;
         top: 0;
         background-color: rgb(255, 255, 255);
         box-shadow: -10px 4px 20px rgba(0, 0, 0, 0.2);
         z-index: 2;
+        transform: translateX(100%);
+        transition: transform 0.2s ease-in-out;
         .drawer {
             width: 420px;
             height: 100vh;
             padding: 30px;
             display: flex;
             flex-direction: column;
-        }
-        .items {
-            flex: 1;
-            overflow: auto;
-            margin-bottom: 40px;
-            .cartItem {
-                border: 1px solid rgb(232, 232, 232);
-                border-radius: 20px;
-                overflow: hidden;
-                display: flex;
-                align-items: center;
-                padding: 10px;
-                margin-bottom: 20px;
-                span {
-                    font-size: 14px;
-                }
-                b {
-                    font-size: 16px;
-                }
-            }
-        }
-        .totalCost {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 20px;
-            div {
+            .items {
                 flex: 1;
-                margin: 0 8px;
-                border-bottom: 1px dashed rgb(194, 194, 194);
+                overflow: auto;
+                margin-bottom: 40px;
+            }
+            .totalCost {
+                display: flex;
+                justify-content: space-between;
+                margin-bottom: 20px;
+                div {
+                    flex: 1;
+                    margin: 0 8px;
+                    border-bottom: 1px dashed rgb(194, 194, 194);
+                }
             }
         }
         .buttonGray {
@@ -64,7 +54,8 @@
             padding: 30px;
             display: flex;
             flex-direction: column;
-             .cartEmptyImage {
+            text-align: center;
+                .cartEmptyImage {
                 flex: 1;
                 display: flex;
                 flex-direction: column;
@@ -75,5 +66,12 @@
                 }
             }
         }
+    }
+}
+.overlayOpened {
+    visibility: visible;
+    opacity: 1;
+    .visibleCart {
+        transform: translateX(0);
     }
 }
